[package]
name = "s3-server"
version = "0.0.1"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/datenlord/s3-server"
readme = "README.md"
description = "S3 service implementation for datenlord"
keywords = ["s3"]
categories = ["web-programming"]
